@@ -15,6 +15,11 @@ $_ = decode('utf8', $_) for @ARGV;
 # Set programname
 $0 = 'hailo';
 
+if ($^O eq 'linux') {
+    require Sys::Prctl;
+    Sys::Prctl::prctl_name('hailo');
+}
+
 # Show help if run without arguments
 @ARGV = qw(--help) unless @ARGV;
 
